crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@flowchart__links.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/flowchart/links.mmd
---
{
  "kind": "graph",
  "direction": "down",
  "nodes": [
    {
      "id": "a",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "a"
      ]
    },
    {
      "id": "b",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "b"
      ]
    },
    {
      "id": "c",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "c"
      ]
    },
    {
      "id": "d",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "d"
      ]
    },
    {
      "id": "e",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "e"
      ]
    },
    {
      "id": "f",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "f"
      ]
    },
    {
      "id": "g",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "g"
      ]
    },
    {
      "id": "h",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "h"
      ]
    },
    {
      "id": "i",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "i"
      ]
    },
    {
      "id": "j",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "j"
      ]
    },
    {
      "id": "k",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "k"
      ]
    },
    {
      "id": "l",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "l"
      ]
    },
    {
      "id": "m",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "m"
      ]
    },
    {
      "id": "n",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "n"
      ]
    },
    {
      "id": "o2",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "o2"
      ]
    },
    {
      "id": "p",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "p"
      ]
    },
    {
      "id": "q",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "q"
      ]
    },
    {
      "id": "t",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "t"
      ]
    },
    {
      "id": "u",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "u"
      ]
    },
    {
      "id": "v",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "v"
      ]
    },
    {
      "id": "w",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "w"
      ]
    },
    {
      "id": "x",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "x"
      ]
    },
    {
      "id": "y",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "y"
      ]
    }
  ],
  "edges": [
    {
      "from": "a",
      "to": "b",
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "c",
      "stroke": "solid",
      "tail": "none",
      "head": "none",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "d",
      "stroke": "dotted",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "e",
      "stroke": "dotted",
      "tail": "none",
      "head": "none",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "f",
      "stroke": "thick",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "g",
      "stroke": "thick",
      "tail": "none",
      "head": "none",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "h",
      "stroke": "invisible",
      "tail": "none",
      "head": "none",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "i",
      "stroke": "solid",
      "tail": "none",
      "head": "circle",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "j",
      "stroke": "solid",
      "tail": "none",
      "head": "cross",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "k",
      "stroke": "solid",
      "tail": "arrow",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "l",
      "stroke": "solid",
      "tail": "circle",
      "head": "circle",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "m",
      "stroke": "solid",
      "tail": "cross",
      "head": "cross",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "n",
      "stroke": "dotted",
      "tail": "arrow",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "o2",
      "stroke": "thick",
      "tail": "arrow",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "p",
      "label": [
        "pipe label"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "q",
      "label": [
        "quoted | pipe"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "a",
      "to": "t",
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "t",
      "to": "u",
      "label": [
        "then"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "v",
      "to": "x",
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "v",
      "to": "y",
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "w",
      "to": "x",
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "w",
      "to": "y",
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    }
  ]
}
