crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@flowchart__loop-labels-td.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/flowchart/loop-labels-td.mmd
---
{
  "kind": "graph",
  "direction": "down",
  "nodes": [
    {
      "id": "timer",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "Timer"
      ]
    },
    {
      "id": "daemon",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "Daemon"
      ]
    },
    {
      "id": "store",
      "shape": {
        "kind": "cylinder"
      },
      "label": [
        "Store"
      ]
    },
    {
      "id": "log",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "Log"
      ]
    }
  ],
  "edges": [
    {
      "from": "timer",
      "to": "daemon",
      "label": [
        "check"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "daemon",
      "to": "daemon",
      "label": [
        "wait until idle, replace the binary, restart"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "daemon",
      "to": "daemon",
      "label": [
        "retry"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "daemon",
      "to": "store",
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "daemon",
      "to": "log",
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    }
  ]
}
